# hermes-cashew

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  __init__.py  conftest.py  plugin.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.factory/skills/hermes-cashew/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: droid-review.yml  droid.yml  opencode.yml  release.yml  tests.yml
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
plugins/memory/cashew/: README.md  __init__.py  config.py  error_tracking.py  log_filter.py  metrics.py  plugin.yaml  sleep_cron_script.py  sleep_refactor.py  sleep_refactor.py.bak  tools.py  tracing.py  verify.py
runbooks/: INDEX.md
scripts/: check-dead-flags.py  check-duplicates.py
tests/: _memory_manager_stub.py  conftest.py  test_agent_context.py  test_cashew_extract.py  test_config_roundtrip.py  test_documentation_contracts.py  test_e2e_install_lifecycle.py  test_flat_entrypoint_reexports.py  test_handle_tool_call.py  test_initialize_lifecycle.py  test_manifest_dependencies.py  test_memory_manager_e2e.py  test_migration.py  test_no_home_leak.py  test_on_pre_compress.py  test_plugin_discovery.py  test_profile_isolation.py  test_quality_metrics.py  test_query_log_privacy.py  test_queue_prefetch.py  test_recall.py  test_retrieval.py  test_session_switch.py  test_sleep_cron_lifecycle.py  test_sleep_cron_reconcile.py  test_sleep_cron_script.py  test_sleep_refactor.py  test_stub_lifecycle.py  test_sync_burst.py  test_sync_turn.py  test_sync_worker.py  test_tool_schema.py
tests/integration/: test_full_lifecycle.py
