[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "hermes-cashew"
version = "0.1.1"
description = "Hermes Agent memory provider plugin backed by Cashew thought-graph memory."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Magnus Hedemark", email = "magnus919@pm.me" }]
dependencies = [
    # cashew-brain 1.0.0 published to PyPI 2026-04-21 — hermes-cashew pins to a compat range.
    "cashew-brain>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.15",
    "jsonschema>=4.18,<5",
    "PyYAML>=6.0",
    "build>=1.0",
]

[project.entry-points."hermes_agent.plugins"]
cashew = "plugins.memory.cashew:register"

[project.urls]
Homepage   = "https://github.com/magnus919/hermes-cashew"
Repository = "https://github.com/magnus919/hermes-cashew"
Issues     = "https://github.com/magnus919/hermes-cashew/issues"

[tool.hatch.metadata]
# Required for `pip install -e .` dev installs when the package itself is cloned from git.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Intentional PEP 420 namespace package — do NOT add __init__.py at plugins/ or plugins/memory/.
# Doing so would shadow Hermes's bundled memory providers when both are on sys.path.
packages = ["plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
