[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "hermes-cashew"
version = "0.10.2"
description = "Hermes Agent memory provider plugin backed by Cashew thought-graph memory."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Magnus Hedemark", email = "magnus919@pm.me" }]
dependencies = [
    "cashew-brain>=1.1.0,<2.0.0",
    "sqlite-vec",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-cov>=4.1,<8",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.15",
    "jsonschema>=4.18,<5",
    "PyYAML>=6.0",
    "build>=1.0",
    "ruff>=0.4,<1",
    "mypy>=1.8,<3",
    "pre-commit>=3.6,<5",
    "vulture>=2.11,<3",
    "deptry>=0.12,<1",
]

tracing = [
    "opentelemetry-api>=1.20,<2",
    "sentry-sdk>=1.40,<3",
]

[project.entry-points."hermes_agent.plugins"]
cashew = "plugins.memory.cashew"

[project.urls]
Homepage   = "https://github.com/magnus919/hermes-cashew"
Repository = "https://github.com/magnus919/hermes-cashew"
Issues     = "https://github.com/magnus919/hermes-cashew/issues"

[tool.hatch.metadata]
# Required for `pip install -e .` dev installs when the package itself is cloned from git.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Intentional PEP 420 namespace package — do NOT add __init__.py at plugins/ or plugins/memory/.
# Doing so would shadow Hermes's bundled memory providers when both are on sys.path.
packages = ["plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--durations=10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "I", "TD", "C90"]
ignore = ["E501", "N802", "N806"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N801", "N999", "C901"]
"__init__.py" = ["N999"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
files = ["plugins/memory/cashew"]
exclude = ["^__init__\\.py$"]

[[tool.mypy.overrides]]
module = "tests/*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugins.memory.cashew.verify"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugins.memory.cashew.sleep_cron_script"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugins.memory.cashew"
disable_error_code = ["type-arg", "index"]

[[tool.mypy.overrides]]
module = "plugins.memory.cashew.sleep_refactor"
disable_error_code = ["type-arg"]

[tool.deptry]
extend_exclude = ["tests", "__init__\\.py", "\\.venv"]
known_first_party = ["plugins"]
package_module_name_map = { "opentelemetry-api" = "opentelemetry" }

[tool.deptry.per_rule_ignores]
DEP001 = ["cashew-brain", "sqlite-vec", "agent", "cron", "utils", "cashew_sleep_refactor", "_hermes_cashew_impl", "opentelemetry-api", "sentry-sdk"]
DEP002 = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-mock", "build", "ruff", "mypy", "pre-commit", "vulture", "deptry", "jsonschema", "opentelemetry-api", "sentry-sdk"]
DEP003 = ["numpy", "sklearn", "sentence_transformers", "httpx", "yaml"]
